# spicebind

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  noxfile.py  pyproject.toml  setup.py
.github/workflows/: docs.yml  pylint.yml  tests.yml
cpp/: AnalogDigitalInterface.cpp  AnalogDigitalInterface.h  CMakeLists.txt  Config.cpp  Debug.h  NgSpiceCallbacks.cpp  NgSpiceCallbacks.h  SpiceVpiConfig.cpp  SpiceVpiConfig.h  TimeBarrier.h  VpiCallbacks.cpp  VpiCallbacks.h  vpi_module.cpp  vpi_user.h
docs/: Doxyfile  README.md
docs/assets/: pygments_hdlspice.py
docs/source/: adc.md  api.rst  conf.py  index.md  spelling_wordlist.txt  spi_adc.md  timing_synchronization.rst
examples/adc/: Makefile  README.md  flash_adc8.cir  flash_adc8.v  flash_adc8_tb.v  test_flash_adc8.py
examples/spi_adc/: README.md  spi_adc.cir  spi_adc.v  test_spi_adc.py
spicebind/: __init__.py  cli.py
tests/: debug.cir  debug.v  error.cir  error.v  multi_instance.cir  multi_instance.v  rawread.py  tb.sv  test.cir  test_debug.py  test_error.py  test_multi_instance.py  test_tb.py
