[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spicebind"
version = "0.0.1"
description = "SpiceBind is a bridge that embeds the ngspice analog engine inside VPI-capable Verilog simulator for mixed-signal co-simulation."
authors = [{name = "Tomasz Hemperek"}]
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Electronic Design Automation (EDA)",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]

[project.scripts]
spicebind-lib-dir = "spicebind.cli:main"

[project.urls]
Homepage = "https://github.com/themperek/spicebind"
Repository = "https://github.com/themperek/spicebind" 